fix : Added Readme and solid principles and validations